double scroll bar fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,9 @@
-html, body {
-  max-width: 100%;
+html, body{
+  position: relative;
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
-
 
 #navigation{
   margin-bottom:5%;
@@ -22,7 +23,7 @@ html, body {
 }
 
 .title{
-  font-size: 150% !important;
+  font-size: 160% !important;
   margin-bottom: 0.7em !important;
 }
 
@@ -67,7 +68,6 @@ html, body {
 }
 
 #main-subtitle{
-  overflow: hidden;
   display: block;
   font-size:2.1vw;
   font-weight: 600;
@@ -91,6 +91,7 @@ html, body {
   display: inline-block;
   -webkit-transition: all .8s;
   transition: all .8s;
+  height: auto;
 }
 
 #filler-column{
@@ -123,7 +124,7 @@ html, body {
   background: rgba(0, 81, 255, 0.185);
   max-width: 100%;
   padding-top: 0.05px;
-  padding-bottom: 0.05px;
+  padding-bottom: 2.5px;
 }
 
 #interests{
@@ -134,7 +135,7 @@ html, body {
 #footer{
   background: rgba(190, 90, 248, 0.226);
   max-width: 100%;
-  font-size: 80%;
+  font-size: 100%;
   z-index: 1001;
 }
 
@@ -200,7 +201,7 @@ html, body {
 
 figcaption {
   position: absolute;
-  font-size: 0.8em;
+  font-size: 1.4vw;
   justify-content: right;
   background: black;
   background: rgba(0,0,0,0.75);
@@ -281,6 +282,10 @@ figure:hover:before {
     overflow: visible;
   }
 
+  #projects {
+    padding-top: 0.7px;
+  }
+
   #main-title{
     font-size: 14.6vw;
     padding-bottom: 3%;
@@ -310,7 +315,7 @@ figure:hover:before {
   #footer-container {
     margin-left: 6%;
     margin-right: 6%;
-    font-size: 0.7em;
+    font-size: 0.77em;
   }
 
   #filler-column {
@@ -319,6 +324,10 @@ figure:hover:before {
 
   #click-toggle {
     display: none;
+  }
+
+  figcaption {
+  font-size: 2.2vw;
   }
 }
 
